@startuml

class Product {
    - code : String
    - name : String
    - price : double
    - discountPrice : double
    + getCode()
    + getName()
    + getPrice()
    + getDiscountPrice()
    + withDiscountPrice()
}

class ShoppingCart {
    - products : List<Product>
    + addProduct()
    + removeProduct()
    + getProducts()
    + calculateTotalPrice()
    + replaceProduct()
    + sortProducts()
}

interface Promotion {
    + apply(cart)
    + getName()
}

class PercentageDiscountPromotion
class Buy2Get1Promotion
class FreeMugPromotion
class ProductCouponPromotion

class PromotionService {
    - promotions : List<Promotion>
    + addPromotion()
    + applyPromotions()
}

class ProductFinder {
    + findCheapest()
    + findMostExpensive()
    + findNCheapest()
    + findNMostExpensive()
}

interface Comparator

class PriceDescendingComparator
class NameComparator

' ===== RELACJE =====

' Model
ShoppingCart --> Product

' Promotion system
PromotionService --> Promotion
PromotionService ..> ShoppingCart

Promotion <|.. PercentageDiscountPromotion
Promotion <|.. Buy2Get1Promotion
Promotion <|.. FreeMugPromotion
Promotion <|.. ProductCouponPromotion

Promotion ..> ShoppingCart

' Finder
ProductFinder ..> Product

' Comparator
Comparator <|.. PriceDescendingComparator
Comparator <|.. NameComparator

PriceDescendingComparator ..> Product
NameComparator ..> Product

@enduml